# Sea_Battle_OOP_Project

./: Boats_Carrier.cpp  Boats_Carrier.h  Boats_Destroyer.cpp  Boats_Destroyer.h  CMakeLists.txt  Game_Boats.cpp  Game_Boats.h  Game_Manager.cpp  Game_Manager.h  Game_Map.cpp  Game_Map.h  Game_Player.cpp  Game_Player.h  Game_TCP_Communication.cpp  Game_TCP_Communication.h  OOP_Assignment.xlsx  README.md  Required_Program_Files.h  Tcp_Client_Socket.cpp  Tcp_Client_Socket.h  Tcp_Server_Socket.cpp  Tcp_Server_Socket.h  game.cpp  game.h  main  main.cpp
Boats_Related/: Boats_Battleship.cpp  Boats_Battleship.h  Boats_Carrier.cpp  Boats_Carrier.h  Boats_Destroyer.cpp  Boats_Destroyer.h  Boats_Patrol_Boat.cpp  Boats_Patrol_Boat.h  Boats_Submarine.cpp  Boats_Submarine.h  Game_Boats.cpp  Game_Boats.h
Documentatie/: .~lock.Sea_Battle_ToDo.xlsx#  Sea_Battle_ToDo.xlsx
External_Data_Declaration/: Data_Declaration.h
Game_Manager/: Game_Manager.cpp  Game_Manager.h  Game_Manager_Loader.cpp  Game_Manager_Loader.h  Online_Game_Manager.cpp  Online_Game_Manager.h
Game_Manager_Related/: Game_Manager_Loader.cpp  Game_Manager_Loader.h  MP_Game_Manager.cpp  MP_Game_Manager.h  SP_Game_Manager.cpp  SP_Game_Manager.h
Player_Related/: First_AI.cpp  First_AI.h  Game_Map.cpp  Game_Map.h  Game_Player.cpp  Game_Player.h  Online_Player.cpp  Online_Player.h  Simple_Ai.cpp  Simple_Ai.h  tile_info.cpp  tile_info.h
Program/: CMakeLists.txt  GameHandler.cpp  GameHandler.h  GameMatrix.cpp  GameMatrix.h  Game_Map.cpp  Game_Map.h  Player.h  main.cpp
Program/Learning_CPP_2/: Learning_CPP_2.pro  boats.cpp  boats.h  game_handler.cpp  game_handler.h  game_map.cpp  game_map.h  main.cpp  map.cpp  map.h  player.cpp  player.h
Program/cpp_clion/: CMakeLists.txt  Map.cpp  Map.h  Player.cpp  Player.h  main.cpp  rules.cpp  rules.h
TCP_Connection/: TCP_SHARED.cpp  TCP_SHARED.h  Tcp_Client_Socket.cpp  Tcp_Client_Socket.h  Tcp_Server_Socket.cpp  Tcp_Server_Socket.h
Testing_Gui_functionality/: CMakeLists.txt  glad.c  main.cpp
Testing_Gui_functionality/code_copy/: main.cpp
not_needed_right_now/: Game_Player.cpp
